# turtlebot3_simulations

moving_obstacles/: CMakeLists.txt  README.txt  package.xml
moving_obstacles/launch/: spawn_person.launch  start_test_world.launch
moving_obstacles/models/person_walking/: model.sdf
moving_obstacles/src/: model_state.py
moving_obstacles/worlds/: CMakeLists.txt  Hospital.world  simple_world.world  turtlebot3_house.world
param/: costmap_common_params_waffle.yaml  dwa_local_planner_params_waffle.yaml  global_costmap_params.yaml  local_costmap_params.yaml
turtlebot3_gazebo/launch/: hospital_world.launch  opRoom_world.launch  turtlebot3_world.launch
turtlebot3_gazebo/models/CGMClassic/: model.sdf
turtlebot3_gazebo/models/ElectronicsRecycling/: model.sdf
turtlebot3_gazebo/models/Hospital_empty/: model.sdf
turtlebot3_gazebo/models/InstrumentCart1/: model.sdf
turtlebot3_gazebo/models/MetalCabinet/: model.sdf
turtlebot3_gazebo/models/OpScrubs/: model.sdf
turtlebot3_gazebo/models/OrangeDoors/: model.sdf
turtlebot3_gazebo/models/StorageRackCoverOpen/: model.sdf
turtlebot3_gazebo/models/SurgicalTrolley/: model.sdf
turtlebot3_gazebo/models/TrolleyBed/: model.sdf
turtlebot3_gazebo/models/TrolleyBedPatient/: model.sdf
turtlebot3_gazebo/models/Walker/: model.sdf
turtlebot3_gazebo/models/WhiteChipChair/: model.sdf
turtlebot3_gazebo/worlds/: OperationRoom.world  hospital6.world
turtlebot3_gazebo/worlds/maps/: OperationRoom_Map.pgm  OperationRoom_Map.yaml  map_movingActors.pgm  map_movingActors.yaml
(+59 files in other folders)
